--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.bih.nic.e_wallet">
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
@@ -44,13 +43,14 @@
         android:icon="@drawable/bsphcl_logo"
         android:installLocation="internalOnly"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@drawable/bsphcl_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup">
-        <activity android:name=".activities.WebReportActivity"></activity>
+        <activity android:name=".activities.WebReportActivity"/>
         <activity android:name=".activities.NeftDateWiseReportActivity" />
         <activity android:name=".activities.GrivanceListActivity" />
         <activity android:name=".activities.GrievanceEntryActivity" />
