--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,49 +2,81 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 35
+    compileSdkVersion 33
     useLibrary 'org.apache.http.legacy'
+
     defaultConfig {
         applicationId "com.bih.nic.e_wallet"
-        minSdkVersion 21
-        targetSdkVersion 35
+        minSdkVersion 22
+        targetSdkVersion 33
         versionCode 4
         versionName "4.2"
         multiDexEnabled true
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
         ndk {
-            abiFilters "armeabi","armeabi-v7a", "arm64-v8a" , "x86", "x86_64"
+            abiFilters "armeabi", "armeabi-v7a", "x86", "x86_64","arm64-v8a"
         }
     }
+
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    splits {
+        abi {
+            enable true
+            reset()
+            universalApk true
+        }
+    }
+
+    externalNativeBuild {
+        cmake {
+            version "3.10.2"
+        }
+    }
+    dexOptions {
+        jumboMode true
+    }
+
     namespace 'com.bih.nic.e_wallet'
 }
+
+configurations {
+    all {
+        exclude group: "jpos.JposConst", module: "jetified-AndroidLib_1070"
+        exclude group: "jpos.JposException", module: "jetified-AndroidLib_1070"
+        exclude group: "jpos.POSPrinterConst", module: "jetified-AndroidLib_1070"
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
+//    implementation 'androidx.cardview:cardview:1.0.0'
+//    implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation files('libs/core.jar')
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test:runner:1.6.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:1.0.2'
-    implementation 'androidx.browser:browser:1.8.0'
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.browser:browser:1.5.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation files('libs/xerces.jar')
     implementation files('libs/icu4j-58_1.jar')
@@ -52,14 +84,12 @@ dependencies {
     implementation files('libs/Android_SDK_ESC_V1.01.17.01PRO.jar')
     implementation files('libs/droidText.0.2.jar')
     implementation files('libs/ePOS2.jar')
-    implementation platform('com.google.firebase:firebase-bom:29.0.0')
+    implementation platform('com.google.firebase:firebase-bom:32.1.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
-    //noinspection DuplicatePlatformClasses
-    //retrofit
     implementation 'com.google.code.gson:gson:2.10'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
 }
