--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,12 @@
     <uses-feature android:name="android.bluetooth" />
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <permission android:name="android.permission.BLUETOOTH" android:label="BLUETOOTH"
-        tools:ignore="ReservedSystemPermission" />
-    <permission android:name="android.permission.BLUETOOTH_ADMIN"
-        tools:ignore="ReservedSystemPermission" />
-    <uses-feature android:name="android.hardware.bluetooth" android:required="false"/>
-    <uses-feature android:name="android.hardware.bluetooth_le" android:required="false"/>
+    <uses-permission android:name="android.permission.BLUETOOTH" android:maxSdkVersion="30"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"  android:maxSdkVersion="30"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
+
+    <uses-feature android:name="android.hardware.bluetooth" android:required="true"/>
+    <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
     <uses-feature
         android:name="android.hardware.telephony"
         android:required="false" />
@@ -175,7 +173,7 @@
         </provider>
     </application>
     <queries>
-        <package android:name="com.nic.app.biharelectricitybilling" />
+        <package android:name="com.nic.app.biharelectricitybilling"/>
         <package android:name="com.datainfosys.bpdcl"/>
     </queries>
 </manifest>
