--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,20 +2,20 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 34
+    compileSdkVersion 33
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.bih.nic.e_wallet"
         minSdkVersion 22
-        targetSdkVersion 34
+        targetSdkVersion 33
         versionCode 4
         versionName "4.2"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         ndk {
-            abiFilters "armeabi", "armeabi-v7a", "x86", "x86_64","arm64-v8a"
+            abiFilters "armeabi", "armeabi-v7a","arm64-v8a"//,"x86","x86_64"
         }
     }
 
@@ -68,7 +68,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.3.1'
 //    implementation 'androidx.cardview:cardview:1.0.0'
 //    implementation 'androidx.gridlayout:gridlayout:1.0.0'
-    implementation files('libs/core.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
@@ -78,6 +77,7 @@ dependencies {
     implementation 'androidx.browser:browser:1.5.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation files('libs/core.jar')
     implementation files('libs/xerces.jar')
     implementation files('libs/icu4j-58_1.jar')
     implementation files('libs/sun.misc.BASE64Decoder.jar')
